Add two scripts for development assistance: login-pod/remote-debug-proxy (#2465)